--- a/examen_opc1/src/main/resources/templates/login.html
+++ b/examen_opc1/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 				<div class="d-flex justify-content-center form_container">
-					<form style="padding-top: 25px;" th:action="@{/login}" th:method="post">
+					<form style="padding-top: 25px;" th:action="@{/perfil/login}" th:method="post">
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
